--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
                       <li class="content__list-item">
                         <a href="Homework7/index.html">Урок 7</a>
                     </li>
+                      <li class="content__list-item">
+                        <a href="Homework8/index.html">Урок 8</a>
+                    </li>
+                      <li class="content__list-item">
+                        <a href="Homework9/index.html">Урок 9</a>
+                    </li>
+                      <li class="content__list-item">
+                        <a href="Homework10/index.html">Урок 10</a>
+                    </li>
+                      <li class="content__list-item">
+                        <a href="Homework11/index.html">Урок 11</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -133,5 +145,6 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
