--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
                       <li class="content__list-item">
                         <a href="Homework22/index.html">Урок 22</a>
                     </li>
+                    </li>
+                      <li class="content__list-item">
+                        <a href="Homework23/index.html">Урок 23</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -178,6 +182,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
