--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
                       <li class="content__list-item">
                         <a href="Homework24/index.html">Урок 24</a>
                     </li>
+                      <li class="content__list-item">
+                        <a href="Homework25/index.html">Урок 25</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -185,6 +188,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
