--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
                       <li class="content__list-item">
                         <a href="Homework26/index.html">Урок 26</a>
                     </li>
+                      <li class="content__list-item">
+                        <a href="Homework27/index.html">Урок 27</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -191,6 +194,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
