--- a/index.html
+++ b/index.html
@@ -174,6 +174,9 @@
                       <li class="content__list-item">
                         <a href="Homework27/index.html">Урок 27</a>
                     </li>
+                      <li class="content__list-item">
+                        <a href="Homework28/index.html">Урок 28</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -194,6 +197,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
